--- a/public/theme/css/header-colors.css
+++ b/public/theme/css/header-colors.css
@@ -267,7 +267,7 @@ html.color-sidebar .sidebar-wrapper {
 
 
 html.color-sidebar.sidebarcolor1 .sidebar-wrapper {
-    background-image: url(../images/bg-themes/1.png);
+    background-image: url(../images/bg-themes/admin.png);
 }
 
 html.color-sidebar.sidebarcolor2 .sidebar-wrapper {
