--- a/public/theme/css/icons.css
+++ b/public/theme/css/icons.css
@@ -25,13 +25,23 @@ File: icons.css
 }
 
 @font-face {
-	font-family: 'Sukhumvit';
+	font-family: 'Kanit';
 	font-weight: normal;
 	font-style: normal;
-	src: url('../fonts/SukhumvitSet-Medium.ttf') format('truetype');
+	src: url('../fonts/Kanit-Regular.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'AllianzNeo';
+	font-weight: normal;
+	font-style: normal;
+	src: url('../fonts/AllianzNeo.ttf') format('truetype');
+}
+.AllianzNeo{
+	font-family: AllianzNeo !important;
+
 }
 *:not(i) {
-	font-family: Sukhumvit !important;
+	font-family: Kanit;
 	letter-spacing: 0px !important;
 	line-height: 1.2em;
 }
